--- a/todo2.css
+++ b/todo2.css
@@ -6,7 +6,6 @@
 body{
     height: 100vh;
     background: #03dfff;
-    /* background: linear-gradient(139deg,#03ddffcb 0%,#ff0381b6 90%); */
     background-image: url('https://www.wallpaperup.com/uploads/wallpapers/2012/09/24/16230/a551368ba082aa22cc38fc0cc975961a.jpg') ;
 }
 .container{
@@ -22,7 +21,7 @@ body{
 }
 .addTask > input[type ="text"]{
     width: 90%;
-    color: #333;
+    color: white;
     border: none;
     border-bottom: 2px solid #666;
     background: none;
@@ -32,8 +31,8 @@ body{
 }
 .addTask button{
     margin: 0 10px;
-    background: #222;
-    color: #fff;
+    background: white;
+    color: black;
     font-size: 18px;
     text-transform: uppercase;
     padding: 10px;
